Add font abd adjusting texts

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta
-      name="description"
-      content="Companion App for Chronicles of Drunagor. Supports your game by automating."
+    name="description"
+    content="Companion App for Chronicles of Drunagor. Supports your game by automating."
     />
     <meta name="keywords" content="Chronicles, Drunagor, Companion, App, Boardgame" />
     <title>Chronicles of Drunagor - Companion App</title>
     <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
