add google analytics

--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
         }
       })(window.location);
     </script>
+
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-QEXVZEL7HZ"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-QEXVZEL7HZ');
+      </script>
+
+
+
+
+
+
   </head>
   <body class="min-h-screen" style="background-color: var(--surface-ground)">
 
