--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <meta name="keywords" content="Chronicles, Drunagor, Companion, App, Boardgame" />
     <title>Chronicles of Drunagor - Companion App</title>
     <link rel="icon" type="image/png" href="/favicon.ico" />
+
+    <meta name="theme-color" content="#363636">
+    
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&family=Cinzel+Decorative:wght@700&family=EB+Garamond:wght@500&display=swap" rel="stylesheet">
@@ -40,7 +47,6 @@
       })(window.location);
     </script>
 
-      <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-QEXVZEL7HZ"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
@@ -49,11 +55,6 @@
 
         gtag('config', 'G-QEXVZEL7HZ');
       </script>
-
-
-
-
-
 
   </head>
   <body class="min-h-screen" style="background-color: var(--surface-ground)">
